[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Sprites/HealthBar/healthfull.png" type="Texture" id=4]
[ext_resource path="res://Sprites/EnemyWizard/Idle/idle1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/EnemyWizard/Idle/idle4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/EnemyWizard/Idle/idle5.png" type="Texture" id=7]
[ext_resource path="res://Sprites/EnemyWizard/Idle/idle6.png" type="Texture" id=9]
[ext_resource path="res://Sprites/EnemyWizard/Idle/idle10.png" type="Texture" id=10]
[ext_resource path="res://Sprites/EnemyWizard/Fly/fly3.png" type="Texture" id=16]
[ext_resource path="res://Sprites/EnemyWizard/Idle/idle2.png" type="Texture" id=17]
[ext_resource path="res://Sprites/EnemyWizard/Fly/fly4.png" type="Texture" id=18]
[ext_resource path="res://Sprites/EnemyWizard/Idle/idle8.png" type="Texture" id=20]
[ext_resource path="res://Sprites/EnemyWizard/Idle/idle3.png" type="Texture" id=21]
[ext_resource path="res://Sprites/EnemyWizard/Fly/fly5.png" type="Texture" id=22]
[ext_resource path="res://Sprites/EnemyWizard/Idle/idle7.png" type="Texture" id=23]
[ext_resource path="res://Sounds/Enemy/enemyHurt.mp3" type="AudioStream" id=26]
[ext_resource path="res://Sounds/Player/playerHurt.mp3" type="AudioStream" id=27]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 18 ), ExtResource( 22 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.66667
height = 6.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 6.0
height = 5.33333

[sub_resource type="CircleShape2D" id=3]
radius = 69.3365

[sub_resource type="CircleShape2D" id=5]
radius = 125.349

[sub_resource type="CapsuleShape2D" id=7]
radius = 10.6667
height = 2.66667

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="Wizard" type="AnimatedSprite" parent="."]
position = Vector2( 7.83333, 8.44271 )
scale = Vector2( 0.260417, 0.260417 )
frames = SubResource( 6 )
animation = "idle"

[node name="WizardCollision" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 2 )
one_way_collision_margin = 0.0

[node name="CollisionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
visible = false
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( 7.33333, 8 )
shape = SubResource( 3 )

[node name="EscapeArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EscapeArea"]
position = Vector2( 8, 7.33333 )
shape = SubResource( 5 )

[node name="Health" type="Sprite" parent="."]
position = Vector2( 7.99999, -1.33333 )
scale = Vector2( 0.0467121, 0.0467121 )
texture = ExtResource( 4 )

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
visible = false
position = Vector2( 8, 8 )
shape = SubResource( 7 )

[node name="WallCheckLeft" type="RayCast2D" parent="."]
position = Vector2( 3.33333, 8.66667 )
enabled = true
cast_to = Vector2( -2.66667, 9.53674e-07 )

[node name="WallCheckRight" type="RayCast2D" parent="."]
position = Vector2( 12.6667, 8.66667 )
enabled = true
cast_to = Vector2( 2.66667, 9.53674e-07 )

[node name="FloorCheck" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
enabled = true
cast_to = Vector2( 0, 14 )

[node name="PlayerHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 27 )
volume_db = -5.0

[node name="EnemyHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 26 )
attenuation = 10.1965

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="CollisionArea" to="." method="_on_CollisionArea_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="EscapeArea" to="." method="_on_EscapeArea_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="finished" from="EnemyHurt" to="." method="_on_EnemyHurt_finished"]
